# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.611 2006/04/25 17:10:11 rocket Exp $

  25 Apr 2006; Eric Edgar <rocket@gentoo.org> modules/catalyst_support.py:
  change hash result format so .DIGESTS is generated correctly

  25 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/catalyst_support.py:
  Added patch to parse_spec by Andrew Gaffney <agaffney@gentoo.org> and for
  bug #131190.

  25 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Added a space for bug #131181.

  23 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/kmerge.sh:
  Fixed creation of kernelpkgs.txt file for the installer.

  21 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Somehow this hosts.bck fix got reverted and I really don't know how. Anyway,
  I'm adding it back.

  20 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/livecd-stage2/livecd-stage2-controller.sh,
  targets/support/bootloader-setup.sh:
  I missed an extra else in bootloader-setup.sh, so I'm fixing that and
  rolling out an emergency rc44.

  20 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh:
  If you use elif, you have to use a then after it. Yeah, that one's totally
  my fault.

  19 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/livecdfs-update.sh:
  Fixing my own bug in livecdfs-update.sh and rolling 2.0_rc43.

  19 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/rc-update.sh:
  Removed runlevel deletion, as it probably wasn't a good idea. This is for
  bug #130476.

  19 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh:
  Removed bootplash support from ppc/ppc64 since they only will work with
  gensplash. Forced use of livecd/splash_type of bootsplash to get