@@ -1,5 +1,9 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.611 2006/04/25 17:10:11 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.612 2006/04/25 17:13:28 rocket Exp $
+
+  25 Apr 2006; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py:
+  digests function uses raw output from hash function now
 
   25 Apr 2006; Eric Edgar <rocket@gentoo.org> modules/catalyst_support.py:
   change hash result format so .DIGESTS is generated correctly
